0.14.0.AC (PRE-RELEASE):
-----------------------
- Adds `PersistBootArgs` Feature
  * Outputs of macOS boot argument related settings are now written to vRAM instead of to nvRAM
    - This is to reduce wear and tear on the nvRAM storage chip
  * Enabled by default but can be disabled using a new `persist_boot_args` configuration token
- Fixes `HelpIcon` Feature
  * The feature had been switched off by default instead of being switched on
  * This bug was introduced in v0.14.0.AB (Commit 9dcd45a)
- Fixes `Legacy MBR`, including `Legacy Windows`, Handling
  * Negatively impacted by `Volume->RootDir` filtering in the `DontScanVolumes` check consolidation
  * This bug was introduced in v0.14.0.AB (Commit a92b376)
- Improves Graphics Handling
  * Improvements to handling `Appleframebuffer`
  * Improvements to handling `Graphics Pass Through`
    - Misc optimisation
    - The `PassGopThrough` feature added in `0.13.3.AD` is now user configurable
      * Enabled by default but can now be disabled using a new `disable_pass_gop_thru` configuration token
  * Improvements to handling misc graphics items
  * Amendments to `GOP Graphics` Handling
    - GOP is now provided/replaced on the `ConsoleOut` handle by default when required
    - Hence, the "Opt-In" `provide_console_gop` token is replaced by the "Opt-Out" `disable_set_consolegop`
- Improves `SetBootArgs` Handling
  * The `set_boot_args` configuration token can now take a `-none` setting
  * This permits disabling previous settings in supplementary/theme config files
- Improves Misc Linux Distro Handling
  * Now better labelled
- Improves Icon File Scanning
  * Optimises `VolumeIcon` and `VolumeBadges` searches
  * These items are now only scanned for displayed volumes
  * Improves loading speed by reducing disk I/O access
- Improves `macOS Installer` Handling
  * Now better identified and labelled
- Improves `RotateCSR` Handling
  * Now displays a confirmation input screen before execution